--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
   "dependencies": {
     "@types/lodash.clamp": "^4.0.3",
     "@types/lodash.debounce": "^4.0.3",
+    "@types/lodash.isequal": "^4.5.3",
     "@types/lodash.throttle": "^4.1.3",
     "@types/react": "^16.0.10",
     "@types/react-dom": "^16.0.1",
     "@types/react-motion": "^0.0.23",
     "@types/react-virtualized": "^9.7.5",
-    "lodash": "^4.17.4",
+    "lodash.clamp": "^4.0.3",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
+    "lodash.throttle": "^4.1.1",
     "react-motion": "^0.5.2",
     "react-virtualized": "^9.19.1",
     "rollup-plugin-local-resolve": "^1.0.7"
