--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sliderp",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "repository": {
